# soulens

./: .gitignore  README.md  start.sh
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  llm.py  main.py  models.py  storage.py
backend/app/analyzer/: audio.py  cache.py  cataloger.py  color.py  downloader.py  fingerprint.py  frames.py  paper_edit.py  precision_trim.py  profile_builder.py  scriptwriter.py  text.py  transcription.py  video.py
backend/app/editor/: engine.py  fcpxml.py  rough_cut.py
backend/app/routes/: analyze.py  edit.py  profile.py
backend/data/: auto_edit.db
backend/data/profiles/jina_test/: profile.json  raw_profile.json  state.json
backend/data/profiles/jina_test/reel_cache/: DTvUfj7iTY8.json  DUUHVLdEnf8.json  DUi3QDsiSKO.json  DWJr8WGElC_.json  DWbvt1DEmtW.json  DWhnc_3kpzs.json  DWtzogHEpAx.json  DWzqRQvgb47.json
backend/data/profiles/matt_test/: profile.json  state.json
backend/data/profiles/matt_test/reel_cache/: DUZVA5OgXXE.json  DUt5x8qksPM.json  DV4mBwagSiH.json  DWCxpjhAbY5.json  DWXgPlJD3Kx.json
backend/data/profiles/wannabechefmatt/: profile.json  state.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalysisProgress.tsx  AuthProvider.tsx  ColorPalette.tsx  EditPanel.tsx  PacingVisualizer.tsx  ProfileConnect.tsx  ProfileProgress.tsx  StyleFingerprint.tsx  StyleProfileCard.tsx  SynthesisGate.tsx  UrlInput.tsx  VideoEditor.tsx
frontend/lib/: api.ts
(+2 files in other folders)
