[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.97.0",
    "openai>=1.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "instaloader>=4.15.1",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "faster-whisper>=1.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "scenedetect[opencv-headless]>=0.6.7.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.46.0",
    "yt-dlp>=2026.3.17",
    "supabase>=2.30.0",
    "PyJWT>=2.0.0",
]
